[gd_scene load_steps=7 format=3 uid="uid://bl0sonahek41k"]

[ext_resource type="Script" path="res://Scripts/ObjectScripts/TutorialDialogueBox.gd" id="1_st5ai"]
[ext_resource type="Texture2D" uid="uid://cohmt1s184skd" path="res://Assets/Images/Objects/FunctionalProps/TutorialDialogue.png" id="2_sydr4"]
[ext_resource type="Texture2D" uid="uid://xe4n818le3p8" path="res://addons/controller_icons/assets/key/e.png" id="3_snvjp"]
[ext_resource type="Script" path="res://addons/controller_icons/objects/TextureRect.gd" id="4_e86yl"]
[ext_resource type="Texture2D" uid="uid://8p7x6yopkswt" path="res://Assets/Images/Objects/Misc/InteractText.png" id="5_s035q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65nb4"]
size = Vector2(111, 140)

[node name="TutorialDialogueBox" type="Node2D"]
script = ExtResource("1_st5ai")

[node name="TutorialDialogue" type="Sprite2D" parent="."]
texture = ExtResource("2_sydr4")

[node name="ControllerTextureRect" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(40, 40)
offset_left = -19.5
offset_top = -25.875
offset_right = 20.5
offset_bottom = 14.125
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_snvjp")
expand_mode = 1
script = ExtResource("4_e86yl")
path = "interact"

[node name="InteractText" type="Sprite2D" parent="."]
visible = false
position = Vector2(37, 8)
texture = ExtResource("5_s035q")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 38)
shape = SubResource("RectangleShape2D_65nb4")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
